--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5353,6 +5353,7 @@ img.imgpopover
     }
 
     .my-downloadshistory-list{
+      width: 1100px;
       .smaller{
         font-size: smaller;
       }
@@ -5370,7 +5371,7 @@ img.imgpopover
         margin-left: 80px;
       }
       .rating{
-        width: 70%;
+        width: 60px !important;
         font-size: 10pt;
       }
       .downloadhistory-image{
@@ -5378,6 +5379,9 @@ img.imgpopover
         height: 50px;
         float: left; 
         margin-right: 15px;      
+      }
+      .nowrap{
+        white-space: nowrap;
       }
     }
 }
