--- a/application/modules/default/views/scripts/user/partials/loopDownloadHistory.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopDownloadHistory.phtml
@@ -14,8 +14,8 @@ $attrhistory = $userrate.' '.$comment.' '.$formproject;
 
 if($this->counter==0){
 ?>
-<div class="row smaller header" style="">
-	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+<div class="row smaller header" >
+	<div class="col-lg-6 col-md-6">
 		<figure>
 		    <img src="<?php echo $this->Image($this->file->image_small, array('width' => 80, 'height' => 80)); ?>"
 		         class="downloadhistory-image" />
@@ -25,7 +25,7 @@ if($this->counter==0){
 			<p><?=$this->file->catTitle?> 
 		</div>
 	</div>			    	
-	<div class="col-lg-1" style="white-space: nowrap;">	
+	<div class="col-lg-2 col-md-2">	
 		
 		<div class="rating text-center" >				
 		    <?php                
@@ -39,7 +39,7 @@ if($this->counter==0){
 		</div>
 		
 	</div>
-	<div class="col-lg-1">
+	<div class="col-lg-2 nowrap">
 		<?=$this->file->max_downloaded_timestamp?> 
 	</div>		
 	<div class="col-lg-2" >
@@ -75,7 +75,9 @@ if($this->counter==0){
 						.'   '.$this->printDate($userRateData['created_at']);
 				}
 			}else{
+					
 		?>
+
 		<button <?=$attrhistory ?>  class="partialReviewDownloadHistory voteup"  name="voteup"> <span class="glyphicon glyphicon-plus" ></span></button>				    
 		<button <?=$attrhistory ?>  class="partialReviewDownloadHistory votedown"  name="votedown"> <span class="glyphicon glyphicon-minus" ></span></button>
 		<?php } ?>
@@ -95,16 +97,16 @@ if($this->counter==0){
 */
 ?>
 <div class="row smaller">
-	<div class="col-lg-2 paddingLeft80" >
+	<div class="col-lg-4 paddingLeft80" >
 	<?=$this->file->file_name?> 		
 	</div>
-	<div class="col-lg-1 " >
+	<div class="col-lg-2 " >
 	<?=$this->humanFilesize($this->file->file_size)?> 		
 	</div>
-	<div class="col-lg-1 " >
+	<div class="col-lg-2 " >
 	<?=$this->file->file_type?> 		
 	</div>
-	<div class="col-lg-1">
+	<div class="col-lg-2 nowrap">
 
 	<?=$this->file->downloaded_timestamp?> 
        
@@ -117,16 +119,16 @@ if($this->counter==0){
 }else{
 ?>
 <div class="row smaller">
-	<div class="col-lg-2 paddingLeft80" >
+	<div class="col-lg-4 paddingLeft80" >
 	<?=$this->file->file_name?> 		
 	</div>
-	<div class="col-lg-1 " >
+	<div class="col-lg-2 " >
 	<?=$this->humanFilesize($this->file->file_size)?> 		
 	</div>
-	<div class="col-lg-1 " >
+	<div class="col-lg-2 " >
 	<?=$this->file->file_type?> 		
 	</div>
-	<div class="col-lg-1">
+	<div class="col-lg-2 nowrap">
 
 	<?=$this->file->downloaded_timestamp?> 
        
