--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -246,6 +246,43 @@
     .border_radius(0);
     margin-bottom: 0;
   }
+
+/*paging style*/
+  .opendesktopwidgetpager{
+    display: flex;        
+    justify-content: right;
+    align-items: center;
+    justify-content: flex-end;
+    ul.opendesktopwidgetpager{
+      display: inline-block;
+      padding-left: 0;
+      margin: 20px 0;
+      border-radius: 4px;
+       > li {
+        display: inline;        
+            >span{
+              cursor: pointer;
+              position: relative;
+              float: left;            
+              margin-left: -1px;
+              line-height: 1.42857143;
+              color: #337ab7;
+              text-decoration: none;
+              background-color: #fff;
+              border: 1px solid #ddd;
+              padding: 5px 10px;
+              font-size: 12px;              
+            }
+              }
+      >.active > span{
+        z-index: 2;
+        color: #fff;
+        cursor: default;
+        background-color: #337ab7;
+        border-color: #337ab7;
+      }
+    }
+  }
 /** /COMMON **/
 
 /** TOP MENU **/
