download install button

--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -469,7 +469,7 @@ if (Zend_Auth::getInstance()->hasIdentity()){
                             <div class="prod-widget-box right">
                                 <div  class="btn-group dropleft" style="width: 100%">
                                     <button style="width: 100%" id="project_btn_download" class="btn btn-primary dropdown-toggle active disabled" type="button" data-toggle="dropdown">Download
-                                    </button>
+                                    <span class="caret"></span></button>
                                     <ul class="dropdown-menu hide" id="dropdown_downloads">
                                     </ul>
                                 </div> 
@@ -477,7 +477,7 @@ if (Zend_Auth::getInstance()->hasIdentity()){
                                 <br>
                                 <div  class="btn-group dropleft" style="width: 100%">
                                     <button style="width: 100%" id="project_btn_install" class="btn btn-primary dropdown-toggle active disabled" type="button" data-toggle="dropdown">Install
-                                    </button>
+                                    <span class="caret"></span></button>
                                     <ul class="dropdown-menu hide" id="dropdown_installs">
                                     </ul>
                                 </div> 
