download install button

--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -464,6 +464,24 @@ if (Zend_Auth::getInstance()->hasIdentity()){
                         <?php } ?>
 
                         <?php /* echo $this->render('partials/sidebarRating.phtml');  */ ?>
+                        
+                        <div>
+                            <div class="prod-widget-box right">
+                                <div  class="btn-group dropleft" style="width: 100%">
+                                    <button style="width: 100%" id="project_btn_download" class="btn dropdown-toggle disabled" type="button" data-toggle="dropdown">Download
+                                    <span class="caret"></span></button>
+                                    <ul class="dropdown-menu hide" id="dropdown_downloads">
+                                    </ul>
+                                </div> 
+                                
+                                <div id="project_btn_grp_install" class="btn-group dropleft hide" style="width: 100%; padding-top: 10px;">
+                                    <button style="width: 100%" id="project_btn_install" class="btn btn-primary dropdown-toggle disabled hide" type="button" data-toggle="dropdown">Install
+                                    <span class="caret"></span></button>
+                                    <ul class="dropdown-menu hide" id="dropdown_installs">
+                                    </ul>
+                                </div> 
+                            </div>
+                        </div>
 
 
                         <!-- MORE PRODUCTS -->
