--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -187,7 +187,6 @@
                                     return entry;
                                 });
 
-
                                 //myArray = myArray.sortOn('active');
                                 myArray.sort(keysrt('active'), false);
                                 myArrayActive = new Array();
@@ -227,6 +226,12 @@
 
                                     var downloadUrl = pploadApiUri + 'files/downloadfile/id/' + this.id + '/s/' + hash + '/t/' + timetamp + '/u/' + userid + '/' + this.name;
                                     var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '">' + this.name + '</a>';
+                                    
+                                    var fileNameBtnLink = this.name;
+                                    if(fileNameBtnLink.length > 25) {
+                                        fileNameBtnLink = fileNameBtnLink.substring(0,22) + '...';
+                                    }
+                                    var downloadBtnLink = '<a href="' + downloadUrl + '" id="data-link-dl' + this.id + '">' + fileNameBtnLink + '</a>';
 
                                     if(this.active == '0') {
                                         downloadLink = this.name;
@@ -292,12 +297,15 @@
                                      }
 
                                      var installButton = '';
+                                     var installLink = '';
                                      
                                      if ( ocsUrl) {
                                             if(this.active && this.ocs_compatible == 1){
-                                                installButton = '<a href="' + ocsUrl + '" class="btn btn-native btn-min-width">Install</a>';                                               
+                                                installButton = '<a href="' + ocsUrl + '" class="btn btn-native btn-min-width">Install</a>';   
+                                                installLink = '<a href="' + ocsUrl + '">' + this.name + '</a>';
                                             } else {
-                                                installButton = '<a href="#" class="btn btn-min-width disabled">INCOMPATIBLE</a>';                                               
+                                                installButton = '<a href="#" class="btn btn-min-width disabled">INCOMPATIBLE</a>';      
+                                                installLink = '';
                                             }                                         
                                      } 
                                    
@@ -357,6 +365,30 @@
                                             <?php endif; ?>
                                             + '</tr>'
                                         );
+                                
+                                        $('#dropdown_downloads').append(
+                                            '<li style="padding-bottom: 4px;padding-top: 4px;">&nbsp;<span>' + downloadBtnLink + '</span><span class="right">&nbsp;' + humanFileSize(this.size,false) + '&nbsp;</span></li>'
+                                        );
+                                        $('#dropdown_downloads').addClass("active");
+                                        $('#dropdown_downloads').removeClass('hide');
+                                        $('#project_btn_download').enable();
+                                        $('#project_btn_download').removeClass('disabled');
+                                        $('#project_btn_download').addClass("active");
+                                        $('#project_btn_download').addClass("btn-primary");
+                                        
+                                        if(ocsUrl && this.active && this.ocs_compatible == 1){
+                                            $('#dropdown_installs').addClass("active");
+                                            $('#dropdown_installs').removeClass('hide');
+                                            $('#project_btn_install').enable();
+                                            $('#project_btn_install').removeClass('disabled');
+                                            $('#project_btn_install').removeClass('hide');
+                                            $('#project_btn_install').addClass("active");
+                                            $('#project_btn_grp_install').removeClass("hide");
+                                            
+                                            $('#dropdown_installs').append(
+                                                '<li style="padding-bottom: 4px;padding-top: 4px;">&nbsp;<span>' + installLink + '</span><span class="right">&nbsp;' + humanFileSize(this.size,false) + '&nbsp;</span></li>'
+                                            );
+                                        }
 
                                         if ((typeof osId != 'undefined') && (osId != "")) {
                                             $("#data-updatepploadfile" + this.id + " option[value='" + osId + "']").attr('selected', 'selected');
@@ -410,6 +442,21 @@
                                                 $fileserverLink = $(this).attr('data-link-org');
                                                 window.open($fileserverLink, '_blank');
                                             });
+                                            
+                                            
+                                            $fileserverLink = $("#data-link-dl" + this.id).attr('href');
+                                            $("#data-link-dl" + this.id).attr('href', decodeURIComponent(link));
+                                            $("#data-link-dl" + this.id).attr('data-link-org', $fileserverLink);
+
+                                            $("#data-link-dl" + this.id).attr('target','_blank');
+                                            $("#data-link-dl" + this.id).html($("#data-link-dl" + this.id).html() + " (External Link)");
+
+                                            $("#data-link-dl" + this.id).click(function (event) {
+                                                event.preventDefault();
+                                                $fileserverLink = $(this).attr('data-link-org');
+                                                window.open($fileserverLink, '_blank');
+                                            });
+                                            
                                         }
                                         
                                         
@@ -623,6 +670,8 @@
                                  var fileCount = $('#download_counter_'+ oldestFileId).html();
                                  var oldNewCounter = parseInt(fileCount) + parseInt(<?= $this->product->count_downloads_hive?>)
                                  $('#download_counter_'+ oldestFileId).html(oldNewCounter);
+                                 
+                                 
 
                                 //$('#downloadscnt').html(downloaded_count_total);
 
@@ -663,6 +712,7 @@
                                  if (data.pagination.next) {
                                      getPploadFiles(data.pagination.next);
                                  }
+                                 
                              },
                              error: function (jqXHR, textStatus, errorThrown) {
 
@@ -800,6 +850,8 @@
                      if (!hasFilesPanelOpened) {
                          getPploadFiles();
                          hasFilesPanelOpened = true;
+                         
+                         
                      }
                      //});
 
